--- a/contacts.css
+++ b/contacts.css
@@ -1,6 +1,6 @@
 body {
     height: auto;
-    background: url(https://phonoteka.org/uploads/posts/2022-02/1643931089_6-phonoteka-org-p-oboi-na-rabochii-stol-serii-fon-6.jpg);
+    background: url(https://img.freepik.com/free-vector/modern-black-luxury-background-with-hexagon-pattern_87202-1055.jpg?w=826&t=st=1688228535~exp=1688229135~hmac=84aa134d791df910ea49456c9c14c85ab2f1a8f1c395cff026b2e17565f4db14);
     background-repeat: no-repeat;
     background-size: cover;
 	background-position: center center;
@@ -102,56 +102,120 @@ nav ul li:hover > ul { display: block; }
     text-transform: uppercase;
 }
 
-.media {
+.contact .cont {
     display: flex;
-    margin-right: 3rem;
-    margin-left: 3rem;
-}
-.box {
-    display: grid;
     align-items: center;
-    margin-right: 3rem;
-    margin-left: 3rem;
-    margin-bottom: 3rem;
+    background-color: var(--black);
+    flex-wrap: wrap;
+    gap: 20rem;
 }
-.box h3 {
+.contact .cont .map {
+    flex: 1 1 45rem;
+    width: 100%;
+    object-fit: cover;
+    margin-right: 50%;
+    height: 600px;
+}
+    .contact .cont form {
+        flex: 1 1 45rem;
+        padding: 5rem 2rem;
+        text-align: center;
+        position: absolute;
+        margin-left: 50%;
+    }
+    .contact .cont form h3 {
+        text-transform: uppercase;
+        font-size: 2.8rem;
+        color: #fff;
+        font-weight: 500;
+    }
+    .inputBox {
+        display: flex;
+        align-items: center;
+        margin-top: 2rem;
+        margin-bottom: 2rem;
+        background: var(--black);
+        border: var(--border);
+    }
+    .inputBox span {
+        color: #fff;
+        font-size: 0.8rem;
+        padding-left: 0.8rem;
+    }
+    .inputBox input {
+        width: 120%;
+        padding: 0.8rem;
+        font-size: 1rem;
+        color: #fff;
+        text-transform: none;
+        background: none;
+    }
+    
+    .contact .cont .btn {
+        background-color: darkred;
+        display: block;
+        width: 100%;
+        border: 1px solid rgba(0, 0, 0, 0.1);
+        color: #eee;
+        font-size: 1.5rem;
+        text-decoration: none;
+        text-align: center;
+        transition: color 0.3s linear;
+    }
+    .contact .cont .btn:hover {
+        color: goldenrod;
+        background-color: rgb(71, 1, 1);
+    }
+.contact .cont form h3 {
+    text-transform: uppercase;
+    font-size: 2.8rem;
     color: #cfae81;
-    font-size: 3rem;
-    font-weight: 400;
-    text-align: center;
+    font-weight: 500;
 }
-.content {
-    background: #cfae81;
-    height: 8rem;
+.contact .cont form p {
+    color: #ccc;
+    font-size: 1.5rem;
+    margin-top: 1rem;
+    font-weight: 500;
 }
-.content h3 {
-    color: var(--bg);
-    font-size: 3rem;
-    text-align: center;
+.inputBox {
+    display: flex;
+    align-items: center;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    background: var(--black);
+    border: var(--border);
 }
-.box img {
-    width: 20rem;
-    height: 25rem;
+.inputBox span {
+    color: #fff;
+    font-size: 0.8rem;
+    padding-left: 0.8rem;
+}
+.inputBox input {
+    width: 120%;
+    padding: 0.8rem;
+    font-size: 1rem;
+    color: #fff;
+    text-transform: none;
+    background: none;
 }
 
-.box .btn {
+.contact .cont .btn {
     background-color: darkred;
     display: block;
-    width: auto;
+    width: 100%;
     border: 1px solid rgba(0, 0, 0, 0.1);
     color: #eee;
-    font-size: 1.7rem;
+    font-size: 1.5rem;
     text-decoration: none;
     text-align: center;
     transition: color 0.3s linear;
-    margin-top: 0.6rem;
-    margin-left: 3rem;
-    margin-right: 3rem;
 }
-.box .btn:hover {
-color: goldenrod;
-background-color: rgb(71, 1, 1);
+.contact .cont .btn:hover {
+    color: goldenrod;
+    background-color: rgb(71, 1, 1);
 }
+
 
 .footer {
     background: var(--bg);
@@ -192,7 +256,6 @@ background-color: rgb(71, 1, 1);
 .footer .credit span {
     color: #cfae81;
 }
-
 .logo img {
     height: 100px; 
     width: auto; 
@@ -202,7 +265,6 @@ background-color: rgb(71, 1, 1);
 .menu-btn {
     display: none;
 }
-
 @media (max-width:991px){
     .home {
         background-position: left;
@@ -233,5 +295,45 @@ background-color: rgb(71, 1, 1);
     header nav ul li {
         display: none;
     }
+    .heading {
+        margin-top: 13rem;
+    }
 
+}
+@media (max-width:425px) {
+    .contact .cont {
+        background-color: var(--bg);
+        margin-left: -5rem;
+    }
+    .contact .cont {
+        background: var(--bg);
+    }
+
+    .contact .cont .map {
+        height: 600px;
+        width: 50%;
+        object-fit: cover;
+        margin-right: 50%;
+    }
+    .footer .links {
+        display: none;
+    }
+}
+@media (max-width:375px) {
+    .contact .cont {
+        background-color: var(--bg);
+    }
+    .contact .cont .map {
+        height: 600px;
+        width: 60%;
+        object-fit: cover;
+        margin-right: 80%;
+    }
+    .contact .cont form {
+        flex: 1 1 45rem;
+        padding: 5rem 2rem;
+        text-align: center;
+        position: absolute;
+        margin-left: 65%;
+    }
 }
