--- a/docs.css
+++ b/docs.css
@@ -1,11 +1,12 @@
 body {
     height: auto;
-    background: url(https://phonoteka.org/uploads/posts/2022-02/1643931089_6-phonoteka-org-p-oboi-na-rabochii-stol-serii-fon-6.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 	background-position: center center;
 	background-attachment: fixed;
     font-family: 'Times New Roman', Times, serif;
+    font-weight: 400;
+    background: var(--bg);
 }
 * {
     margin: 0;
@@ -88,6 +89,13 @@ nav ul li ul li:hover {
 }
 nav ul li:hover > ul { display: block; }
 
+
+#section {
+    display: grid;
+    place-items: center;
+    min-height: 100vh;
+    width: 100vh;
+}
 .heading {
     text-align: center;
     color: #fff;
@@ -102,60 +110,82 @@ nav ul li:hover > ul { display: block; }
     text-transform: uppercase;
 }
 
-.media {
-    display: flex;
-    margin-right: 3rem;
-    margin-left: 3rem;
-}
-.box {
-    display: grid;
-    align-items: center;
-    margin-right: 3rem;
-    margin-left: 3rem;
+.book-list {
+    margin-left: 2rem;
+    margin-right: 2rem;
+    display: table-column;
     margin-bottom: 3rem;
+    background: var(--bg);
 }
-.box h3 {
-    color: #cfae81;
-    font-size: 3rem;
-    font-weight: 400;
-    text-align: center;
+.book {
+    display: flex;
+    margin-bottom: 7rem;
+}
+.book img {
+    height: 27rem;
+    width: auto;
+    margin-left: 3rem;
+    margin-right: 3rem;
 }
 .content {
-    background: #cfae81;
-    height: 8rem;
+    color: #ccc;
+    margin-top: 1.5rem;
+    margin-right: 1.5rem;
+    margin-bottom: 1.5rem;
+    text-align: left;
+}
+.content h2 {
+    font-size: 2rem;
+    color: #cfae81;
 }
 .content h3 {
-    color: var(--bg);
-    font-size: 3rem;
-    text-align: center;
+    font-size: 1.5rem;
+    color: #cfae81;
+    margin-top: 0.7rem;
 }
-.box img {
-    width: 20rem;
-    height: 25rem;
+.content p {
+    margin-top: 0.7rem;
+    font-size: 1.3rem;
 }
-
-.box .btn {
+.btn {
     background-color: darkred;
     display: block;
-    width: auto;
+    width: 30%;
     border: 1px solid rgba(0, 0, 0, 0.1);
     color: #eee;
-    font-size: 1.7rem;
+    font-size: 1.3rem;
     text-decoration: none;
     text-align: center;
     transition: color 0.3s linear;
-    margin-top: 0.6rem;
+    margin-top: 2rem;
+    border-radius: 10px;
+}
+.btn:hover {
+    color: goldenrod;
+    background-color: rgb(71, 1, 1);
+}
+.film-list {
+    margin-left: 2rem;
+    margin-right: 2rem;
+    display: table-column;
+    margin-bottom: 3rem;
+    background: var(--bg);
+}
+.film {
+    display: flex;
+    margin-bottom: 7rem;
+}
+.film img {
+    height: 27rem;
+    width: auto;
     margin-left: 3rem;
     margin-right: 3rem;
-}
-.box .btn:hover {
-color: goldenrod;
-background-color: rgb(71, 1, 1);
 }
 
 .footer {
     background: var(--bg);
     text-align: center;
+    width: 100%;
 }
 .footer .share a{
     margin-right: 2rem;
@@ -193,6 +223,13 @@ background-color: rgb(71, 1, 1);
     color: #cfae81;
 }
 
+#docs {
+    display: grid;
+    place-items: center;
+    background: var(--bg);
+
+}
+
 .logo img {
     height: 100px; 
     width: auto; 
@@ -202,7 +239,6 @@ background-color: rgb(71, 1, 1);
 .menu-btn {
     display: none;
 }
-
 @media (max-width:991px){
     .home {
         background-position: left;
@@ -232,6 +268,28 @@ background-color: rgb(71, 1, 1);
     }
     header nav ul li {
         display: none;
+    }
+    .heading {
+        margin-top: 13rem;
+    }
+}
+@media (max-width:425px) {
+    .book {
+        display: block;
+    }
+    .heading {
+        font-size: 3.1rem;
+        margin-left: -2rem;
+    }
+    .book-list {
+        margin-left: 0rem;
+    }
+    .book .content {
+        margin-left: 2rem;
+    }
+    .book img {
+        justify-content: center;
+        margin-left: 2rem;
     }
 
 }
