--- a/interview.css
+++ b/interview.css
@@ -101,58 +101,87 @@ nav ul li:hover > ul { display: block; }
     text-shadow: -1px -1px 0 rgb(240, 183, 27), 1px -1px 0 rgb(240, 183, 27), -1px 1px 0 rgb(240, 183, 27), 1px 1px 0 rgb(240, 183, 27);
     text-transform: uppercase;
 }
-
-.media {
-    display: flex;
-    margin-right: 3rem;
-    margin-left: 3rem;
-}
-.box {
+.container {
     display: grid;
+    grid-template-columns: 2fr 1fr;
+    gap: 15px;
+    align-items: flex-start;
+    padding: 5px 5%;
+}
+.container .main-video {
+    background: var(--bg);
+    border-radius: 5px;
+    padding: 10px;
+}
+.container .main-video iframe {
+    height: 20rem;
+    width: 100%;
+    border-radius: 5px;
+}
+.container .main-video .title {
+    color: #fff;
+    font-size: 1.3rem;
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
+.container .video-list {
+    background: var(--bg);
+    border-radius: 5px;
+    height: 520px;
+    overflow-y: scroll;
+    margin-bottom: 2rem;
+}
+.container .video-list::-webkit-scrollbar {
+    width: 7px;
+}
+.container .video-list::-webkit-scrollbar-track {
+    background: var(--black);
+    border-radius: 50px;
+}
+.container .video-list::-webkit-scrollbar-thumb {
+    background: darkred;
+    border-radius: 50px;
+}
+.container .video-list .vid iframe {
+    width: 100px;
+    border-radius: 5px;
+}
+.container .video-list .vid {
+    display: flex;
     align-items: center;
-    margin-right: 3rem;
-    margin-left: 3rem;
-    margin-bottom: 3rem;
-}
-.box h3 {
-    color: #cfae81;
-    font-size: 3rem;
-    font-weight: 400;
-    text-align: center;
-}
-.content {
-    background: #cfae81;
-    height: 8rem;
-}
-.content h3 {
-    color: var(--bg);
-    font-size: 3rem;
-    text-align: center;
-}
-.box img {
-    width: 20rem;
-    height: 25rem;
-}
-
-.box .btn {
-    background-color: darkred;
-    display: block;
-    width: auto;
+    gap: 15px;
+    background: #ccc;
+    border-radius: 5px;
+    margin: 10px;
+    padding: 10px;
     border: 1px solid rgba(0, 0, 0, 0.1);
-    color: #eee;
-    font-size: 1.7rem;
-    text-decoration: none;
-    text-align: center;
-    transition: color 0.3s linear;
-    margin-top: 0.6rem;
-    margin-left: 3rem;
-    margin-right: 3rem;
+    cursor: pointer;
 }
-.box .btn:hover {
-color: goldenrod;
-background-color: rgb(71, 1, 1);
+.container .video-list .vid:hover {
+    background: #eee;
 }
-
+.container .video-list .vid.active {
+    background: rgb(156, 28, 28);
+}
+.container .video-list .vid.active .title {
+    color: #fff;
+}
+.container .video-list .vid .title {
+    color: #fff;
+    font-size: 17px;
+}
+@media (max-width:991px) {
+    .container {
+        grid-template-columns: 1.5fr 1fr;
+        padding: 10px;
+    }
+}
+@media (max-width:768px) {
+    .container {
+        grid-template-columns: 1fr;
+        padding: 10px;
+    }
+}
 .footer {
     background: var(--bg);
     text-align: center;
@@ -193,45 +222,5 @@ background-color: rgb(71, 1, 1);
     color: #cfae81;
 }
 
-.logo img {
-    height: 100px; 
-    width: auto; 
-    margin-left: 30px;
-}
 
-.menu-btn {
-    display: none;
-}
 
-@media (max-width:991px){
-    .home {
-        background-position: left;
-        justify-content: center;
-        text-align: center;
-    }
-
-    html {
-        font-size: 85%;
-    }
-    header {
-        padding: 1.5rem 2rem;
-    }
-}
-@media (max-width:1176px) {
-    .home {
-        background-position: left;
-        justify-content: center;
-        text-align: center;
-    }
-
-    .menu-btn {
-        display: inline-block;
-    }
-    .menu-btn ul li {
-        font-size: 3rem;
-    }
-    header nav ul li {
-        display: none;
-    }
-
-}
