--- a/maculele.css
+++ b/maculele.css
@@ -1,9 +1,9 @@
 body {
     height: auto;
-    background: url(https://phonoteka.org/uploads/posts/2022-02/1643931089_6-phonoteka-org-p-oboi-na-rabochii-stol-serii-fon-6.jpg);
+    background: var(--bg);
     background-repeat: no-repeat;
     background-size: cover;
-	background-position: center center;
+	background-position: left;
 	background-attachment: fixed;
     font-family: 'Times New Roman', Times, serif;
 }
@@ -52,7 +52,9 @@ header {
     border-bottom: var(--border);
     z-index: 1000;
 }
-
+header nav {
+    margin-right: 3rem;
+}
 header nav ul li {
     position: relative;
     float: left;
@@ -88,6 +90,16 @@ nav ul li ul li:hover {
 }
 nav ul li:hover > ul { display: block; }
 
+.logo img {
+    height: 100px; 
+    width: auto; 
+    margin-left: 30px;
+}
+
+.menu-btn {
+    display: none;
+}
+
 .heading {
     text-align: center;
     color: #fff;
@@ -101,56 +113,69 @@ nav ul li:hover > ul { display: block; }
     text-shadow: -1px -1px 0 rgb(240, 183, 27), 1px -1px 0 rgb(240, 183, 27), -1px 1px 0 rgb(240, 183, 27), 1px 1px 0 rgb(240, 183, 27);
     text-transform: uppercase;
 }
-
-.media {
+.basic {
+    background-color: var(--black);
     display: flex;
-    margin-right: 3rem;
-    margin-left: 3rem;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-left: 2.8rem;
+    margin-right: 2.8rem;
+
 }
-.box {
-    display: grid;
+.basic .row {
+    display: block;  
     align-items: center;
-    margin-right: 3rem;
-    margin-left: 3rem;
-    margin-bottom: 3rem;
+    margin: 4rem;
 }
-.box h3 {
-    color: #cfae81;
-    font-size: 3rem;
-    font-weight: 400;
-    text-align: center;
-}
-.content {
-    background: #cfae81;
-    height: 8rem;
-}
-.content h3 {
-    color: var(--bg);
-    font-size: 3rem;
-    text-align: center;
-}
-.box img {
-    width: 20rem;
-    height: 25rem;
+.row iframe {
+    height: 300px;
+    width: 500px;
+    border-radius: 10px;
 }
 
-.box .btn {
-    background-color: darkred;
+.basic .row h3 {
+    text-align: center;
+    font-size: 3.2rem;
+    color: #cfae81;
+    font-weight: 500;
+    margin-top: 1.3rem;
+}
+.basic .row .content p {
+    font-size: 1.2rem;
+    color: #ccc;
+    padding: 1rem 0;
+    line-height: 1.8;
+    font-weight: 200;
+}
+
+.row .btn {
+    background-color: #be9965;
+    ;
     display: block;
-    width: auto;
+    width: 100%;
     border: 1px solid rgba(0, 0, 0, 0.1);
     color: #eee;
-    font-size: 1.7rem;
+    font-size: 2rem;
     text-decoration: none;
     text-align: center;
-    transition: color 0.3s linear;
-    margin-top: 0.6rem;
-    margin-left: 3rem;
-    margin-right: 3rem;
 }
-.box .btn:hover {
-color: goldenrod;
-background-color: rgb(71, 1, 1);
+.row .btn:hover {
+    background-color: #916a34;
+}
+.media {
+    width: 100%;
+    height: 400px;
+}
+
+.content b {
+    color: #be9965;
+}
+
+
+.heading {
+    color: var(--main-color);
+    text-shadow: -1px -1px 0 rgb(240, 183, 27), 1px -1px 0 rgb(240, 183, 27), -1px 1px 0 rgb(240, 183, 27), 1px 1px 0 rgb(240, 183, 27);
+    text-transform: uppercase;
 }
 
 .footer {
@@ -192,17 +217,6 @@ background-color: rgb(71, 1, 1);
 .footer .credit span {
     color: #cfae81;
 }
-
-.logo img {
-    height: 100px; 
-    width: auto; 
-    margin-left: 30px;
-}
-
-.menu-btn {
-    display: none;
-}
-
 @media (max-width:991px){
     .home {
         background-position: left;
@@ -233,5 +247,86 @@ background-color: rgb(71, 1, 1);
     header nav ul li {
         display: none;
     }
+
+}
+
+@media (max-width:425px) {
+    .basic {
+        margin-top: 14rem;
+    }
+    .basic .row {
+        margin-left: 3.5rem;
+        width: fit-content;
+        
+    }
+    .basic .row .content {
+        margin: 1.5rem;
+        text-align: justify;
+        width: fit-content;
+    }
+    .basic .row .content p {
+        font-size: 1.8rem;
+    }
+    .footer {
+        margin-top: 3rem;
+        margin-bottom: 2rem;
+    }
+    .footer .links {
+        display: none;
+    }
+}
+@media (max-width:375px) {
+    .basic {
+        margin-top: 14rem;
+    }
+    .basic .row {
+        margin-left: 4.5rem;
+        width: fit-content;     
+    }
+    .basic .row img {
+        width: 305px;
+    }
+    .basic .row .content {
+        margin: 1.5rem;
+        text-align: justify;
+        width: fit-content;
+    }
+    .basic .row .content p {
+        font-size: 1.8rem;
+    }
+    .footer {
+        margin-top: 3rem;
+        margin-bottom: 2rem;
+        margin-left: 1rem;
+    }
+}
+@media (max-width:320px) {
+    .basic .row img {
+        width: 255px;
+    }
+    .basic {
+        margin-top: 14rem;
+    }
+    .basic .row {
+        margin-left: 4.5rem;
+        width: fit-content;     
+    }
+    .basic .row img {
+        width: 305px;
+    }
+    .basic .row .content {
+        margin: 1.5rem;
+        text-align: justify;
+        width: fit-content;
+    }
+    .basic .row .content p {
+        font-size: 1.8rem;
+    }
+    .footer {
+        margin-top: 3rem;
+        margin-bottom: 2rem;
+        margin-left: 0.5rem;
+    }
+
 
 }
