--- a/music.css
+++ b/music.css
@@ -1,11 +1,12 @@
 body {
     height: auto;
-    background: url(https://phonoteka.org/uploads/posts/2022-02/1643931089_6-phonoteka-org-p-oboi-na-rabochii-stol-serii-fon-6.jpg);
+    background: var(--bg);
     background-repeat: no-repeat;
     background-size: cover;
 	background-position: center center;
 	background-attachment: fixed;
     font-family: 'Times New Roman', Times, serif;
+    font-weight: 400;
 }
 * {
     margin: 0;
@@ -88,6 +89,13 @@ nav ul li ul li:hover {
 }
 nav ul li:hover > ul { display: block; }
 
+
+#section {
+    display: grid;
+    place-items: center;
+    min-height: 100vh;
+    width: 100vh;
+}
 .heading {
     text-align: center;
     color: #fff;
@@ -102,60 +110,31 @@ nav ul li:hover > ul { display: block; }
     text-transform: uppercase;
 }
 
-.media {
-    display: flex;
-    margin-right: 3rem;
-    margin-left: 3rem;
-}
-.box {
-    display: grid;
-    align-items: center;
-    margin-right: 3rem;
-    margin-left: 3rem;
-    margin-bottom: 3rem;
-}
-.box h3 {
-    color: #cfae81;
-    font-size: 3rem;
-    font-weight: 400;
-    text-align: center;
-}
 .content {
-    background: #cfae81;
-    height: 8rem;
+    color: #ccc;
+    margin-top: 1.5rem;
+    margin-right: 1.5rem;
+    margin-bottom: 1.5rem;
+    text-align: left;
+}
+.content h2 {
+    font-size: 2rem;
+    color: #cfae81;
 }
 .content h3 {
-    color: var(--bg);
-    font-size: 3rem;
-    text-align: center;
+    font-size: 1.5rem;
+    color: #cfae81;
+    margin-top: 0.7rem;
 }
-.box img {
-    width: 20rem;
-    height: 25rem;
-}
-
-.box .btn {
-    background-color: darkred;
-    display: block;
-    width: auto;
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    color: #eee;
-    font-size: 1.7rem;
-    text-decoration: none;
-    text-align: center;
-    transition: color 0.3s linear;
-    margin-top: 0.6rem;
-    margin-left: 3rem;
-    margin-right: 3rem;
-}
-.box .btn:hover {
-color: goldenrod;
-background-color: rgb(71, 1, 1);
+.content p {
+    margin-top: 0.7rem;
+    font-size: 1.3rem;
 }
 
 .footer {
     background: var(--bg);
     text-align: center;
+    width: 100%;
 }
 .footer .share a{
     margin-right: 2rem;
@@ -192,6 +171,73 @@ background-color: rgb(71, 1, 1);
 .footer .credit span {
     color: #cfae81;
 }
+#docs {
+    display: grid;
+    place-items: center;
+    background: var(--bg);
+}
+
+.music-list {
+    margin-left: 2rem;
+    margin-right: 2rem;
+    display: table-column;
+    margin-bottom: 3rem;
+    background: var(--bg);
+}
+.music {
+    display: flex;
+    margin-bottom: 7rem;
+}
+.music img {
+    width: 50%;
+    margin-left: 3rem;
+    margin-right: 3rem;
+}
+.content {
+    color: #ccc;
+    margin-top: 1.5rem;
+    margin-right: 1.5rem;
+    margin-bottom: 1.5rem;
+    text-align: left;
+    margin-left: 3rem;
+    width: 50%;
+}
+.content h2 {
+    font-size: 2rem;
+    color: #cfae81;
+}
+.content h3 {
+    font-size: 1.5rem;
+    color: #cfae81;
+    margin-top: 0.7rem;
+}
+.content ul li {
+    margin-top: 0.7rem;
+    font-size: 1.3rem;
+}
+.btn_m {
+    background-color: darkred;
+    display: block;
+    width: 70%;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    color: #eee;
+    font-size: 1.3rem;
+    text-decoration: none;
+    text-align: center;
+    transition: color 0.3s linear;
+    margin-top: 2rem;
+    border-radius: 10px;
+}
+.btn_m:hover {
+    color: goldenrod;
+    background-color: rgb(71, 1, 1);
+}
+.content_2 {
+    display: flex;
+}
+.c_2 {
+    margin-left: 2.5rem;
+}
 
 .logo img {
     height: 100px; 
@@ -202,7 +248,6 @@ background-color: rgb(71, 1, 1);
 .menu-btn {
     display: none;
 }
-
 @media (max-width:991px){
     .home {
         background-position: left;
@@ -216,12 +261,20 @@ background-color: rgb(71, 1, 1);
     header {
         padding: 1.5rem 2rem;
     }
+    .heading {
+        margin-top: 13rem;
+        margin-right: -3rem;
+    }
 }
 @media (max-width:1176px) {
     .home {
-        background-position: left;
+        background-size: cover;
+        background-position: center center;
         justify-content: center;
         text-align: center;
+    }
+    header {
+        padding: 1.5rem 2rem;
     }
 
     .menu-btn {
@@ -233,5 +286,58 @@ background-color: rgb(71, 1, 1);
     header nav ul li {
         display: none;
     }
-
+    .home .find {
+        margin-top: 11rem;
+        text-align: left;
+        margin-bottom: 3rem;
+    }
+}
+@media (max-width:425px) {
+    .heading {
+        font-size: 3rem;
+        margin-left: -3rem;
+    }
+    .music {
+       display: block; 
+    }
+    .music img {
+        width: 100%;
+        margin-left: 0rem;
+    }
+    .content {
+        width: 100%;
+        margin-left: 1rem;
+        margin-right: 1.5rem;
+    }
+    .footer .links {
+        display: none;
+    }
+}
+@media (max-width:375px) {
+    .heading {
+        margin-left: -1.5rem;
+    }
+    .c_2 {
+        margin-left: 1.5rem;
+    }
+    .music-list {
+        margin-left: 3rem;
+    }
+}
+@media (max-width:320px) {
+    .heading {
+        font-size: 2.4rem;
+    }
+    .content ul li {
+        font-size: 1rem;
+    }
+    .content h2 {
+        font-size: 1.7rem;
+    }
+    .content h3 {
+        font-size: 1.4rem;
+    }
+    .c_2 {
+        margin-left: 0.5rem;
+    }
 }
