--- a/contacts.css
+++ b/contacts.css
@@ -318,6 +318,16 @@ nav ul li:hover > ul { display: block; }
     .footer .links {
         display: none;
     }
+    .contact .cont form {
+        width: 50%;
+        margin-left: 60%;
+    }
+    .contact .cont form h3 {
+        font-size: 2.2rem;
+    }
+    .contact .cont form p {
+        font-size: 1.3rem;
+    }
 }
 @media (max-width:375px) {
     .contact .cont {
@@ -325,15 +335,39 @@ nav ul li:hover > ul { display: block; }
     }
     .contact .cont .map {
         height: 600px;
-        width: 60%;
+        width: 50%;
         object-fit: cover;
         margin-right: 80%;
     }
     .contact .cont form {
-        flex: 1 1 45rem;
-        padding: 5rem 2rem;
-        text-align: center;
-        position: absolute;
         margin-left: 65%;
+        width: 50%;
+    }
+    .contact .cont form h3 {
+        font-size: 2.1rem;
+    }
+    .contact .cont form p {
+        font-size: 1.2rem;
+    }
+}
+@media (max-width:320px) {
+    .contact .cont .map {
+        height: 600px;
+        width: 50%;
+        object-fit: cover;
+        margin-right: 80%;
+    }
+    .contact .cont form {
+        margin-left: 65%;
+        width: 55%;
+    }
+    .contact .cont form h3 {
+        font-size: 2rem;
+    }
+    .contact .cont form p {
+        font-size: 1rem;
+    }
+    .contact .cont {
+        margin-bottom: 4rem;
     }
 }
