--- a/history.css
+++ b/history.css
@@ -40,6 +40,47 @@ html::-webkit-scrollbar-thumb {
     border-radius: 5rem;
 }
 
+body {
+    height: auto;
+    background: var(--bg);
+    background-repeat: no-repeat;
+    background-size: cover;
+	background-position: left;
+	background-attachment: fixed;
+    font-family: 'Times New Roman', Times, serif;
+}
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Times New Roman', Times, serif;
+    list-style: none;
+    text-decoration: none;
+}
+
+:root {
+    --main-color: darkred;
+    --black: rgb(53, 52, 52);
+    --bg: #272727;
+    --border: 0.1rem solid rgba(255, 255, 255, 0.3);
+}
+
+html {
+    overflow-x: hidden;
+    scroll-padding-top: 9rem;
+    scroll-behavior: smooth;
+}
+html::-webkit-scrollbar {
+    width: 0.8rem;
+}
+html::-webkit-scrollbar-track {
+    background: transparent;
+}
+html::-webkit-scrollbar-thumb {
+    background: #fff;
+    border-radius: 5rem;
+}
+
 header {
     position: fixed;
     justify-content: space-between;
@@ -53,7 +94,9 @@ header {
     border-bottom: var(--border);
     z-index: 1000;
 }
-
+header nav {
+    margin-right: 3rem;
+}
 header nav ul li {
     position: relative;
     float: left;
@@ -88,6 +131,20 @@ nav ul li ul li:hover {
     color: darkred;
 }
 nav ul li:hover > ul { display: block; }
+
+.logo img {
+    height: 100px; 
+    width: auto; 
+    margin-left: 30px;
+}
+
+.menu-btn {
+    display: none;
+}
+.menu-btn img {
+    height: 45px; 
+    width: auto;
+}
 
 
 #section {
@@ -233,14 +290,6 @@ nav ul li:hover > ul { display: block; }
     }
 }
 @media screen and (max-width: 425px) {
-
-    header nav ul li a {
-        padding: 5px;
-        margin-right: 3rem;
-    }
-    header nav ul li {
-        margin-left: 2rem;
-    }
     .heading {
         margin-top: 12rem;
     }
